plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.hotel'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2025.1.1")
}

dependencies {
	// Integracion con MongoDB para el almacenaje del catalogo NoSQL
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	// Soporte para crear APIs RESTful
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.cloud:spring-cloud-starter-config'
	// Cliente para registrar el servicio de catalogo en Eureka
	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
	
	// Libreria principal requerida para alimentar inicialmente la base de datos con informacion de prueba (Datafaker)
	implementation 'net.datafaker:datafaker:2.5.4'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}
